# tr-autonomy-2-amogh1216

src/spinnyrobot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/spinnyrobot/install/spinnyrobot/share/spinnyrobot/: package.sh
src/spinnyrobot/log/: latest_build
src/spinnyrobot/test/: CMakeLists.txt
src/spinnyrobot/your_solution/: CMakeLists.txt
src/spinnyrobot/your_solution/src/: robo_spin_sol.cpp  robo_spin_sol.h
your_sol/: CMakeLists.txt  package.xml
your_sol/src/: robo_spin_sol.cpp  robo_spin_sol.h
